<resources>
    <string name="app_name">OPSC_CompanionCare</string>
    <string-array name="dropdown_items">
        <item name="Dog">Dog</item>
        <item name="Cat">Cat</item>
        <item name="Rabbit">Rabbit</item>
        <item name="Fish">Fish</item>
    </string-array>
    <string name="select_language">Select Language</string>
    <string name="enter_username">Enter Usename</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_username">Create Username</string>
    <string name="create_password">Create Password</string>
    <string name="email">Email</string>
    <string name="text1">By signing up, you agree to use the app for personal budgeting. We may collect and protect your data. Misuse may lead to account suspension. See Privacy Policy for details.</string>
    <string name="text2">Thank you for registering on our App! We at CompanionCare promise to give to luxury experience!</string>
    <string name="text3">You’re about to delete your account are you sure that you want to remove it?</string>
    <string name="text4">I agree with the Terms and Conditions</string>
    <string name="continuebtn">Continue</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="pet_profile">Pet Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="main">Main Information</string>
    <string name="breed">Breed</string>
    <string name="sex">Sex</string>
    <string name="date1">Date of Birth</string>
    <string name="date2">Date Given</string>
    <string name="date3">Date of Visit</string>
    <string name="date4">Next Due Date</string>
    <string name="colour">Colour</string>
    <string name="text5">Don’t have an account?</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="chipping">Chipping</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="phoneno">Phone Number</string>
    <string name="mircono">Microchip Number</string>
    <string name="datemirco">Date Of Microchipping</string>
    <string name="pet_name">Pet Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="history_type">History type</string>
    <string name="account_deleted">Account Deletion</string>
    <string name="vaccination">Vaccination</string>
    <string name="cancel">Cancel</string>
    <string name="vet_name">Vet Name</string>
    <string name="veterinarian_name">Veterinarian name</string>
    <string name="notes">Notes</string>
    <string name="reason">Reason for Visit</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="treatment">Treatment</string>
    <string name="followup">Follow Up Appointment Date</string>
    <string name="edit_pet_profile">Edit Pet profiles</string>
    <string name="history">History</string>
    <string name="delete_account">Delete Account</string>
    <string name="setting">Setting</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="health_records">Health Records</string>
    <string name="vaccines">Vaccines</string>
    <string name="vet_visits">Vet Visits</string>
    <string name="diet_tracking">Diet Tracking</string>
    <string name="grooming">Grooming</string>
    <string name="toys">Toys</string>
    <string name="pet_food">Pet Food</string>
    <string name="journal">Journal</string>
    <string name="add_pet">Add Pet</string>

</resources>