<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--top layer-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Settings"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/parchment">

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="90dp"
      android:background="@drawable/top_layer">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="18dp"
        android:layout_marginRight="20dp"
        android:elevation="4dp"
        android:text="settings"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
  </FrameLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2">

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/edit_petbtn"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:orientation="horizontal"
      android:background="@color/parchment"
      android:text="@string/edit_pet_profile"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textAlignment="textStart"
      android:layout_marginBottom="1dp"
      android:paddingStart="10dp"
      android:clickable="true">
  </androidx.appcompat.widget.AppCompatButton>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/historybtn"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:orientation="horizontal"
      android:background="@color/parchment"
      android:text="@string/history"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textAlignment="textStart"
      android:layout_marginBottom="1dp"
      android:paddingStart="10dp"
      android:clickable="true">
  </androidx.appcompat.widget.AppCompatButton>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/deleteaccbtn"
      android:clickable="true"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:orientation="horizontal"
      android:contextClickable="true"
      android:background="@color/parchment"
      android:text="@string/delete_account"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textAlignment="textStart"
      android:layout_marginBottom="1dp"
      android:paddingStart="10dp">
  </androidx.appcompat.widget.AppCompatButton>

  <FrameLayout
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginBottom="118dp">
<!--      android:background="@drawable/setting_box"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textAlignment="textStart"
        android:paddingStart="10dp">
    </TextView>

    <RadioGroup
        android:id="@+id/radioGroupLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <RadioButton
          android:layout_marginTop="50dp"
          android:id="@+id/btnEnglish"
          android:layout_width="match_parent"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:textSize="16sp"
          android:layout_height="50dp"
          android:text="English" />

      <RadioButton
          android:id="@+id/btnAfrikaans"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:textSize="16sp"
          android:text="Afrikaans" />

      <RadioButton
          android:id="@+id/btnIsiZulu"
          android:layout_width="match_parent"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:textSize="16sp"
          android:layout_height="50dp"
          android:text="IsiZulu" />

    </RadioGroup>
  </FrameLayout>
  </LinearLayout>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bottom_nav">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="12dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="1">

        <ImageButton
            android:layout_weight="1"
            android:contentDescription="profilebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/profilebtn"
            android:layout_marginStart="30dp"
            android:background="@drawable/profile"></ImageButton>
      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="1">

        <ImageButton
            android:layout_weight="2"
            android:contentDescription="homebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/home"
            android:layout_marginStart="30dp"
            android:background="@drawable/home"></ImageButton>
      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="1">

        <ImageButton
            android:contextClickable="true"
            android:contentDescription="settingbtn"
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/history"
            android:layout_marginStart="30dp"
            android:background="@drawable/settings"></ImageButton>
      </LinearLayout>
    </LinearLayout>
  </FrameLayout>

</LinearLayout>