<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parchment"
    android:orientation="vertical"
    tools:context=".Dashboard">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:background="@drawable/top_layer">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:elevation="4dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

<!--        name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="80dp"
            android:hint=""
            android:elevation="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <!--age-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="52dp"
            android:elevation="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <!--status-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/statusField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="120dp"
            android:elevation="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:text="@string/pet_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circularImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:elevation="10dp"
            android:src="@drawable/dog"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/boxes"
            android:elevation="4dp" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:layout_marginBottom="20dp">
        <ImageButton
            android:id="@+id/Hrecord"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/whitebox"
            android:contentDescription="image records"
            android:elevation="4dp"
            android:src="@drawable/records"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/health_records"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp">
            <ImageButton
                android:id="@+id/vaccine"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/whitebox"
                android:contentDescription="image records"
                android:elevation="4dp"
                android:src="@drawable/injection"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vaccines"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="6dp">
            <ImageButton
                android:id="@+id/visit"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/whitebox"
                android:contentDescription="image records"
                android:elevation="4dp"
                android:src="@drawable/clinic"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/vet_visits"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/diet"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/whitebox"
                android:contentDescription="image records"
                android:elevation="4dp"
                android:src="@drawable/diet"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/diet_tracking"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10dp">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp">
        <ImageButton
            android:id="@+id/chatbot"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/whitebox"
            android:contentDescription="image records"
            android:elevation="4dp"
            android:src="@drawable/bot"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Chat bot"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp">
        <ImageButton
            android:id="@+id/groom"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/whitebox"
            android:contentDescription="image records"
            android:elevation="4dp"
            android:src="@drawable/grooming"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/grooming"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingStart="14dp"
        android:paddingEnd="6dp">
        <ImageButton
            android:id="@+id/toys"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/whitebox"
            android:contentDescription="image records"
            android:elevation="4dp"
            android:src="@drawable/tennisball"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Pet Toys"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/food"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/whitebox"
            android:contentDescription="image records"
            android:elevation="4dp"
            android:src="@drawable/petfood"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_food"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

</LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_nav">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="12dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:contentDescription="profilebtn"
                    android:layout_weight="1"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:id="@+id/profilebtn"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/profile">
                </ImageButton>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:contentDescription="hombtn"
                    android:layout_weight="2"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:id="@+id/home"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/home">
                </ImageButton>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:contentDescription="settingbtn"
                    android:contextClickable="true"
                    android:layout_weight="1"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:id="@+id/settings"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/settings">
                </ImageButton>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>